--- a/client/src/app/layout/content/content.component.html
+++ b/client/src/app/layout/content/content.component.html
@@ -1,19 +1,15 @@
-<div>
-  <div class="mat-app-background">
-    <header>
-      <app-header></app-header>
-    </header>
+<div [class]="theme">
+    <div class="mat-app-background">
+        <header class="header">
+            <app-header></app-header>
+        </header>
 
+        <main class="main">
+            <router-outlet></router-outlet>
+        </main>
 
-    <main>
-      <div class="container">
-        <router-outlet></router-outlet>
-      </div>
-    </main>
-
-
-    <footer>
-      <app-footer></app-footer>
-    </footer>
-  </div>
+        <footer class="footer">
+            <app-footer></app-footer>
+        </footer>
+    </div>
 </div>
