--- a/client/src/styles/colors.scss
+++ b/client/src/styles/colors.scss
@@ -1,5 +1,8 @@
 $background-color : #F9FAFC;
 $white: #FFFFFF;
 $black: #000000;
+$text-black: #414141;
 $link-color : #0052CC;
-$button-background-primary: #32bdbd;
+
+$error-color: #ff0000;
+$primary: #32bdbd;
