Client #4 Add registration component

--- a/client/src/app/pages/auth/components/reset-password/reset-password.component.html
+++ b/client/src/app/pages/auth/components/reset-password/reset-password.component.html
@@ -7,9 +7,8 @@
             <form class="form" [formGroup]="form" (ngSubmit)="submit()" autocomplete="off">
                 <div class="form-group">
                     <mat-form-field appearance="outline" hideRequiredMarker>
-                        <mat-label>Email</mat-label>
-                        <input matInput placeholder="test@example.com" formControlName="email"
-                               (blur)="checkChange('email')">
+                        <mat-label>Enter your email</mat-label>
+                        <input matInput placeholder="test@example.com" formControlName="email" (blur)="checkChange('email')">
                         <mat-error *ngIf="errorHandling('email', 'required')">
                             Email is required
                         </mat-error>
@@ -22,8 +21,7 @@
                 <div class="form-group">
                     <mat-form-field appearance="outline" hideRequiredMarker>
                         <mat-label>Password</mat-label>
-                        <input matInput type="password" placeholder="" formControlName="password"
-                               (blur)="checkChange('password')">
+                        <input matInput type="password" placeholder="" formControlName="password" (blur)="checkChange('password')">
                         <mat-error *ngIf="errorHandling('password', 'required')">
                             Password is required
                         </mat-error>
