--- a/client/src/styles/colors.scss
+++ b/client/src/styles/colors.scss
@@ -4,5 +4,5 @@ $black: #000000;
 $text-black: #414141;
 $link-color : #0052CC;
 
-$error-color: #ff0000;
+$error-color: #cb1a1a;
 $primary: #32bdbd;
