--- a/client/src/app/pages/auth/components/reset-password/reset-password.component.html
+++ b/client/src/app/pages/auth/components/reset-password/reset-password.component.html
@@ -1,48 +1,63 @@
-<section class="login-section">
-    <div class="login-container">
-        <div class="header-wrapper">
-            <h2>Quiz Games</h2>
-        </div>
+<section class="reset-password-section">
+    <div class="reset-password-container">
         <div class="body-wrapper">
-            <form class="form" [formGroup]="form" (ngSubmit)="submit()" autocomplete="off">
+            <h2>Quiz Games</h2>
+
+            <form class="form" *ngIf="!showNewPassword" [formGroup]="formResetPassword"
+                  (ngSubmit)="submitResetPassword()">
                 <div class="form-group">
                     <mat-form-field appearance="outline" hideRequiredMarker>
-                        <mat-label>Enter your email</mat-label>
-                        <input matInput placeholder="test@example.com" formControlName="email" (blur)="checkChange('email')">
-                        <mat-error *ngIf="errorHandling('email', 'required')">
+                        <mat-label>Email</mat-label>
+                        <input matInput placeholder="test@example.com" formControlName="email"
+                               (blur)="checkChange('email', formResetPassword)">
+                        <mat-error *ngIf="errorHandling('email', 'required', formResetPassword)">
                             Email is required
                         </mat-error>
-                        <mat-error *ngIf="errorHandling('email', 'email')">
+                        <mat-error *ngIf="errorHandling('email', 'email', formResetPassword)">
                             Not a valid email (ex. test@gmail.com)
                         </mat-error>
                     </mat-form-field>
                 </div>
 
+                <button class="flat-primary-btn" mat-flat-button color="primary" type="submit">
+                    Send password reset
+                </button>
+            </form>
+
+            <form class="form" *ngIf="showNewPassword" [formGroup]="formSetNewPassword"
+                  (ngSubmit)="submitSetNewPassword()">
                 <div class="form-group">
                     <mat-form-field appearance="outline" hideRequiredMarker>
                         <mat-label>Password</mat-label>
-                        <input matInput type="password" placeholder="" formControlName="password" (blur)="checkChange('password')">
-                        <mat-error *ngIf="errorHandling('password', 'required')">
+                        <input matInput type="password" placeholder="" formControlName="password"
+                               (blur)="checkChange('password', formSetNewPassword)">
+                        <mat-error *ngIf="errorHandling('password', 'required', formSetNewPassword)">
                             Password is required
                         </mat-error>
-                        <mat-error *ngIf="errorHandling('password', 'minlength')">
+                        <mat-error *ngIf="errorHandling('password', 'minlength', formSetNewPassword)">
                             Password cannot be less than 6 characters
                         </mat-error>
                     </mat-form-field>
                 </div>
 
-                <a routerLink="/auth/reset-password">Forgot your password?</a>
+                <div class="form-group">
+                    <mat-form-field appearance="outline" hideRequiredMarker>
+                        <mat-label>Confirm password</mat-label>
+                        <input matInput type="password" placeholder="" formControlName="confirmPassword"
+                               (blur)="checkChange('confirmPassword', formSetNewPassword)">
+                        <mat-error *ngIf="errorHandling('confirmPassword', 'notMatch', formSetNewPassword)">
+                            Confirm password must match the entered password
+                        </mat-error>
+                        <mat-error *ngIf="errorHandling('confirmPassword', 'required', formSetNewPassword)">
+                            Confirm password is required
+                        </mat-error>
+                    </mat-form-field>
+                </div>
 
-                <button class="primary-btn" mat-flat-button color="primary" type="submit">
-                    Log In
+                <button class="flat-primary-btn" mat-flat-button color="primary" type="submit">
+                    Set new password
                 </button>
             </form>
-
-            <div class="controls">
-                <button class="primary-btn" routerLink="/auth/registration" mat-flat-button color="primary" type="submit">
-                    Create new account
-                </button>
-            </div>
         </div>
     </div>
 </section>
