--- a/client/src/app/layout/content/content.component.html
+++ b/client/src/app/layout/content/content.component.html
@@ -1,4 +1,4 @@
-<div [class]="theme">
+<div class="theme" [class]="theme">
     <div class="mat-app-background">
         <header class="header">
             <app-header></app-header>
