--- a/client/src/app/layout/content/content.component.scss
+++ b/client/src/app/layout/content/content.component.scss
@@ -1,6 +1,34 @@
 @import "src/styles/main";
 
-.main {
-  margin: 0 auto;
-  max-width: 1200px;
+.theme {
+    height: 100%;
+
+    .mat-app-background {
+        height: 100%;
+        @include flexCol;
+        background-color: $background-color;
+
+        .header {
+            width: 100%;
+        }
+
+        .main {
+
+            width: 100%;
+            margin: 0 auto;
+            padding-top: 60px;
+            max-width: 1200px;
+            flex: 1 0 auto;
+            padding-right: 60px;
+            padding-left: 60px;
+        }
+
+        .footer {
+            width: 100%;
+            flex: 0 0 auto;
+
+        }
+    }
 }
+
+
