--- a/client/src/app/layout/header/header.component.html
+++ b/client/src/app/layout/header/header.component.html
@@ -1,7 +1,21 @@
-<ul class="navigation_menu_list">
-  <li class="menu_list_item" *ngFor="let page of pages">
-    <a routerLink="{{page.link}}" routerLinkActive="active" >
-      {{page.title}}
-    </a>
-  </li>
-</ul>
+<nav class="header-container">
+    <div class="menu-wrapper">
+        <div class="logo-container">
+            <img src="/assets/images/logo/logo.svg" alt="logo">
+        </div>
+        <ul class="navigation_menu_list">
+            <li class="menu_list_item" *ngFor="let page of pages">
+                <a routerLink="{{page.link}}" routerLinkActive="active">
+                    {{page.title}}
+                </a>
+            </li>
+        </ul>
+    </div>
+
+    <div class="action-wrapper">
+        <div class="icon-container" (click)="doSignOut()">
+            <mat-icon aria-hidden="false" aria-label="logout">logout</mat-icon>
+        </div>
+    </div>
+</nav>
+
