--- a/client/src/app/pages/auth/components/reset-password/reset-password.component.html
+++ b/client/src/app/pages/auth/components/reset-password/reset-password.component.html
@@ -1,7 +1,7 @@
 <section class="reset-password-section">
     <div class="reset-password-container">
         <div class="body-wrapper">
-            <h2>Quiz Games</h2>
+            <h2>Title</h2>
 
             <form class="form" *ngIf="!showNewPassword" [formGroup]="formResetPassword"
                   (ngSubmit)="submitResetPassword()">
