--- a/client/src/app/pages/auth/components/registration/registration.component.html
+++ b/client/src/app/pages/auth/components/registration/registration.component.html
@@ -1,7 +1,7 @@
 <section class="registration-section">
     <div class="registration-container">
         <div class="body-wrapper">
-            <h2>Quiz Games</h2>
+            <h2>Title</h2>
 
             <form class="form" [formGroup]="form" (ngSubmit)="submit()">
                 <div class="form-group">
