--- a/client/src/app/pages/auth/components/registration/registration.component.html
+++ b/client/src/app/pages/auth/components/registration/registration.component.html
@@ -68,6 +68,8 @@
                     </mat-form-field>
                 </div>
 
+                <a routerLink="/auth/login">Already have an account?</a>
+
                 <button class="flat-primary-btn" mat-flat-button color="primary" type="submit">
                     Register
                 </button>
