--- a/client/src/app/pages/auth/components/login/login.component.scss
+++ b/client/src/app/pages/auth/components/login/login.component.scss
@@ -25,12 +25,13 @@
         }
 
         .body-wrapper {
-            padding: 40px 40px 60px;
+            padding: 30px 40px 40px;
 
             background-color: $white;
             box-shadow: rgb(0 0 0 / 10%) 0 0 10px;
 
             .controls {
+                max-width: 400px;
                 margin-top: 20px;
                 padding-top: 20px;
                 border-top: 1px solid hsl(0, 0%, 80%);
@@ -38,6 +39,23 @@
                 button {
                     width: 100%;
                     height: 40px;
+
+                    &.create-button,
+                    &.google-button,
+                    &.facebook-button {
+                        margin-top: 20px;
+
+                        &:first-child {
+                            margin-top: 0;
+                        }
+
+                        img {
+                            position: absolute;
+                            top: 50%;
+                            left: 20px;
+                            transform: translateY(-50%);
+                        }
+                    }
                 }
             }
         }
