Add Refresh token and facebook auth

--- a/client/src/app/pages/auth/components/registration/registration.component.html
+++ b/client/src/app/pages/auth/components/registration/registration.component.html
@@ -3,7 +3,7 @@
         <div class="body-wrapper">
             <h2>Title</h2>
 
-            <form class="form" [formGroup]="form" (ngSubmit)="submit()">
+            <form class="form" [formGroup]="form" (ngSubmit)="doRegistration()">
                 <div class="form-group">
                     <mat-form-field appearance="outline" hideRequiredMarker>
                         <mat-label>Email</mat-label>
