--- a/client/src/app/pages/auth/components/login/login.component.html
+++ b/client/src/app/pages/auth/components/login/login.component.html
@@ -52,7 +52,7 @@
                 </button>
 
                 <button class="stroked-primary-btn facebook-button" type="submit"
-                        mat-stroked-button color="primary" (click)="getGoogleLink()">
+                        mat-stroked-button color="primary" (click)="getFacebookLink()">
                     <img width="26" height="26" src="assets/images/logo/facebook.svg" alt="facebook sign in"/>
                     Sign In with Facebook
                 </button>
