--- a/client/src/app/pages/auth/components/login/login.component.html
+++ b/client/src/app/pages/auth/components/login/login.component.html
@@ -37,6 +37,8 @@
                 <button class="flat-primary-btn" mat-flat-button color="primary" type="submit">
                     Sign In
                 </button>
+
+                <div class="form-errors">{{errorWithSignIn}}</div>
             </form>
 
             <div class="controls">
