--- a/client/src/app/pages/auth/components/reset-password/reset-password.component.html
+++ b/client/src/app/pages/auth/components/reset-password/reset-password.component.html
@@ -1,10 +1,10 @@
 <section class="reset-password-section">
-    <div class="reset-password-container">
+    <div *ngIf="!confirmedEmail" class="reset-password-container">
         <div class="body-wrapper">
             <h2>Title</h2>
 
-            <form class="form" *ngIf="!showNewPassword" [formGroup]="formResetPassword"
-                  (ngSubmit)="submitResetPassword()">
+            <form class="form" *ngIf="!resetPassword" [formGroup]="formResetPassword"
+                  (ngSubmit)="getResetPasswordLink()">
                 <div class="form-group">
                     <mat-form-field appearance="outline" hideRequiredMarker>
                         <mat-label>Email</mat-label>
@@ -19,13 +19,15 @@
                     </mat-form-field>
                 </div>
 
+                <div class="form-errors">{{errorWithEmail}}</div>
+
                 <button class="flat-primary-btn" mat-flat-button color="primary" type="submit">
                     Send password reset
                 </button>
             </form>
 
-            <form class="form" *ngIf="showNewPassword" [formGroup]="formSetNewPassword"
-                  (ngSubmit)="submitSetNewPassword()">
+            <form class="form" *ngIf="resetPassword" [formGroup]="formSetNewPassword"
+                  (ngSubmit)="setNewPassword()">
                 <div class="form-group">
                     <mat-form-field appearance="outline" hideRequiredMarker>
                         <mat-label>Password</mat-label>
@@ -59,5 +61,11 @@
                 </button>
             </form>
         </div>
+    </div>
+
+    <div class="confirmedEmail" *ngIf="confirmedEmail">
+        <p>
+            A password reset confirmation has been sent to your email <b>{{userEmail}}</b>.
+        </p>
     </div>
 </section>
