--- a/client/src/app/pages/auth/components/login/login.component.scss
+++ b/client/src/app/pages/auth/components/login/login.component.scss
@@ -7,7 +7,7 @@
     justify-content: center;
     align-items: flex-start;
 
-    background-image: url("/assets/images/background/bg2.svg");
+    background-image: url("/assets/images/background/2.jpg");
 
     background-repeat: no-repeat;
     background-position: center;
@@ -29,6 +29,12 @@
 
             background-color: $white;
             box-shadow: rgb(0 0 0 / 10%) 0 0 10px;
+
+            .form {
+                position: relative;
+
+
+            }
 
             .controls {
                 max-width: 400px;
