--- a/client/src/app/pages/auth/components/registration/registration.component.scss
+++ b/client/src/app/pages/auth/components/registration/registration.component.scss
@@ -7,7 +7,7 @@
     justify-content: center;
     align-items: flex-start;
 
-    background-image: url("/assets/images/background/bg2.svg");
+    background-image: url("/assets/images/background/2.jpg");
 
     background-repeat: no-repeat;
     background-position: center;
