--- a/client/src/app/pages/auth/components/reset-password/reset-password.component.scss
+++ b/client/src/app/pages/auth/components/reset-password/reset-password.component.scss
@@ -7,7 +7,7 @@
     justify-content: center;
     align-items: flex-start;
 
-    background-image: url("/assets/images/background/bg2.svg");
+    background-image: url("/assets/images/background/2.jpg");
 
     background-repeat: no-repeat;
     background-position: center;
@@ -29,6 +29,23 @@
 
             background-color: $white;
             box-shadow: rgb(0 0 0 / 10%) 0 0 10px;
+        }
+    }
+
+    .confirmedEmail {
+        max-width: 50%;
+        position: absolute;
+        top: 40%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+
+        p {
+            margin: 20px 0 0;
+            @include setFont(opensans-regular, 400, 20px, 32px, $text-black);
+
+            b {
+                @include setFont(opensans-bold, 700, 18px, 28px, $text-black);
+            }
         }
     }
 }
