--- a/client/src/app/pages/auth/components/login/login.component.scss
+++ b/client/src/app/pages/auth/components/login/login.component.scss
@@ -1,7 +1,9 @@
 @import "src/styles/main";
 
 .login-section {
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
+    position: relative;
 
     @include flexRow;
     justify-content: center;
