--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,3 +1,1 @@
-<div class="router-wrapper" [@rotateCubeToLeft]="getState(o)">
-    <router-outlet #o="outlet">  </router-outlet>
-</div>
+<router-outlet></router-outlet>
