--- a/client/src/app/pages/auth/components/login/login.component.scss
+++ b/client/src/app/pages/auth/components/login/login.component.scss
@@ -1,9 +1,7 @@
 @import "src/styles/main";
 
 .login-section {
-    width: 100vw;
-    height: 100vh;
-    position: relative;
+    height: 100%;
 
     @include flexRow;
     justify-content: center;
