--- a/client/src/app/pages/auth/components/reset-password/reset-password.component.html
+++ b/client/src/app/pages/auth/components/reset-password/reset-password.component.html
@@ -56,6 +56,11 @@
                     </mat-form-field>
                 </div>
 
+                <div class="password-was-changed" *ngIf="passwordWasChanged">
+                    Password was changed
+                    <a routerLink="/auth/login">Go to Login page</a>
+                </div>
+
                 <button class="flat-primary-btn" mat-flat-button color="primary" type="submit">
                     Set new password
                 </button>
