--- a/client/src/app/pages/auth/components/reset-password/reset-password.component.scss
+++ b/client/src/app/pages/auth/components/reset-password/reset-password.component.scss
@@ -6,12 +6,8 @@
     @include flexRow;
     justify-content: center;
     align-items: flex-start;
-
-    background-image: url("/assets/images/background/2.jpg");
-
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
+    background: rgb(0,0,0);
+    background: linear-gradient(45deg, rgba(0,0,0,0.03995101458552175) 70%, rgba(29,241,253,0.5049370089832808) 100%);
 
     .reset-password-container {
         position: relative;
@@ -28,7 +24,20 @@
             padding: 30px 40px 40px;
 
             background-color: $white;
+            border-radius: 8px;
             box-shadow: rgb(0 0 0 / 10%) 0 0 10px;
+
+            .password-was-changed {
+                font-size: 12px;
+
+                position: absolute;
+                left: 0;
+                bottom: 50px;
+
+                a {
+                    font-size: 12px;
+                }
+            }
         }
     }
 
