--- a/client/src/app/pages/auth/components/login/login.component.scss
+++ b/client/src/app/pages/auth/components/login/login.component.scss
@@ -28,6 +28,7 @@
             padding: 30px 40px 40px;
 
             background-color: $white;
+            border-radius: 8px;
             box-shadow: rgb(0 0 0 / 10%) 0 0 10px;
 
             .form {
