--- a/client/src/app/pages/auth/components/registration/registration.component.html
+++ b/client/src/app/pages/auth/components/registration/registration.component.html
@@ -76,4 +76,7 @@
             </form>
         </div>
     </div>
+
+    <img width="300" height="300" class="image-one" src="assets/images/background/auth_bg_1.svg" alt="abstract image"/>
+    <img width="300" height="300" class="image-two" src="assets/images/background/auth_bg_2.svg" alt="abstract image"/>
 </section>
