--- a/client/src/app/pages/auth/components/reset-password/reset-password.component.html
+++ b/client/src/app/pages/auth/components/reset-password/reset-password.component.html
@@ -73,4 +73,7 @@
             A password reset confirmation has been sent to your email <b>{{userEmail}}</b>.
         </p>
     </div>
+
+    <img width="300" height="300" class="image-one" src="assets/images/background/auth_bg_1.svg" alt="abstract image"/>
+    <img width="300" height="300" class="image-two" src="assets/images/background/auth_bg_2.svg" alt="abstract image"/>
 </section>
