--- a/client/src/app/pages/auth/components/reset-password/reset-password.component.scss
+++ b/client/src/app/pages/auth/components/reset-password/reset-password.component.scss
@@ -1,22 +1,20 @@
 @import "src/styles/main";
 
 .reset-password-section {
-    height: 100%;
+    min-height: 100%;
 
+    @include backgroundGradient;
     @include flexRow;
     justify-content: center;
-    align-items: flex-start;
-    background: rgb(0,0,0);
-    background: linear-gradient(45deg, rgba(0,0,0,0.03995101458552175) 70%, rgba(29,241,253,0.5049370089832808) 100%);
 
     .reset-password-container {
         position: relative;
-        top: 50%;
-        transform: translateY(-50%);
+        z-index: 10;
 
         h2 {
-            @include setFont(golos-bold, 700, 26px, 30px, $text-black);
             margin-bottom: 25px;
+
+            @include setFont(golos-bold, 700, 26px, 30px, $text-black);
             text-align: center;
         }
 
@@ -43,6 +41,7 @@
 
     .confirmedEmail {
         max-width: 50%;
+
         position: absolute;
         top: 40%;
         left: 50%;
@@ -56,5 +55,19 @@
                 @include setFont(opensans-bold, 700, 18px, 28px, $text-black);
             }
         }
+    }
+
+    .image-one {
+        position: fixed;
+        left: 0;
+        bottom: 0;
+        z-index: 1;
+    }
+
+    .image-two {
+        position: fixed;
+        right: 0;
+        bottom: 0;
+        z-index: 1;
     }
 }
