--- a/client/src/app/pages/auth/components/account-verification/account-verification.component.html
+++ b/client/src/app/pages/auth/components/account-verification/account-verification.component.html
@@ -17,4 +17,7 @@
             seconds.
         </p>
     </div>
+
+    <img width="300" height="300" class="image-one" src="assets/images/background/auth_bg_1.svg" alt="abstract image"/>
+    <img width="300" height="300" class="image-two" src="assets/images/background/auth_bg_2.svg" alt="abstract image"/>
 </section>
