--- a/client/src/app/pages/auth/components/account-verification/account-verification.component.scss
+++ b/client/src/app/pages/auth/components/account-verification/account-verification.component.scss
@@ -1,17 +1,19 @@
 @import "src/styles/main";
 
 .account-verification {
-    width: 100%;
-    height: 100%;
+    min-height: 100%;
+
+    @include backgroundGradient;
+    @include flexCol;
+    justify-content: center;
+
     position: relative;
 
     .before-confirm-container,
     .after-confirm-container {
         max-width: 50%;
-        position: absolute;
-        top: 40%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+        position: relative;
+        z-index: 10;
 
         .account-message {
             margin: 20px 0 0;
@@ -21,5 +23,19 @@
                 @include setFont(opensans-bold, 700, 18px, 28px, $text-black);
             }
         }
+    }
+
+    .image-one {
+        position: fixed;
+        left: 0;
+        bottom: 0;
+        z-index: 1;
+    }
+
+    .image-two {
+        position: fixed;
+        right: 0;
+        bottom: 0;
+        z-index: 1;
     }
 }
