--- a/client/src/app/pages/auth/components/login/login.component.html
+++ b/client/src/app/pages/auth/components/login/login.component.html
@@ -43,7 +43,7 @@
 
             <div class="controls">
                 <button class="stroked-primary-btn create-button" routerLink="/auth/registration"
-                    mat-stroked-button color="primary" type="submit">
+                        mat-stroked-button color="primary" type="submit">
                     Create new account
                 </button>
 
@@ -61,4 +61,9 @@
             </div>
         </div>
     </div>
+
+    <img width="300" height="300" class="image-one" src="assets/images/background/auth_bg_1.svg" alt="abstract image"/>
+    <img width="300" height="300" class="image-two" src="assets/images/background/auth_bg_2.svg" alt="abstract image"/>
 </section>
+
+
