--- a/client/src/app/pages/auth/components/registration/registration.component.scss
+++ b/client/src/app/pages/auth/components/registration/registration.component.scss
@@ -1,26 +1,21 @@
 @import "src/styles/main";
 
 .registration-section {
-    height: 100%;
+    min-height: 100%;
 
+    @include backgroundGradient;
     @include flexRow;
     justify-content: center;
-    align-items: flex-start;
-
-    background-image: url("/assets/images/background/2.jpg");
-
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
 
     .registration-container {
         position: relative;
-        top: 50%;
-        transform: translateY(-50%);
+
+        z-index: 10;
 
         h2 {
-            @include setFont(golos-bold, 700, 26px, 30px, $text-black);
             margin-bottom: 25px;
+
+            @include setFont(golos-bold, 700, 26px, 30px, $text-black);
             text-align: center;
         }
 
@@ -31,5 +26,19 @@
             border-radius: 8px;
             box-shadow: rgb(0 0 0 / 10%) 0 0 10px;
         }
+    }
+
+    .image-one {
+        position: fixed;
+        left: 0;
+        bottom: 0;
+        z-index: 1;
+    }
+
+    .image-two {
+        position: fixed;
+        right: 0;
+        bottom: 0;
+        z-index: 1;
     }
 }
